# FastAPI-Gym-api

./: .env  .gitignore  project.py  pyproject.toml  t.py
src/: main.py
src/config/: setting.py
src/config/email/: generate.py
src/config/email/mjml/client/: register.mjml
src/config/security/: email_token.py  hashing.py  jwt_token.py
src/database/redis/: engine.py  taskq.py
src/database/sql/: engine.py  mexin.py  model.py
src/module/client/: root.py  shared.py
src/module/client/auth/: dependencie.py  helper.py  schema.py  service.py
src/module/client/auth/dependencies/: __init__.py  params.py  response_type.py
src/module/client/auth/routes/: v1.py
src/module/client/auth/schema/: body.py  response.py
src/module/client/client/: schema.py  service.py
src/module/client/client/routes/: v1.py
src/module/common/cities/: schema.py
src/module/shared/middleware/: timer.py
src/shared/: timestemp.py
src/shared/dependencies/: db.py
src/shared/enums/: constant.py
src/shared/schema/: emptyString.py
