[project]
name = "charm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.3"
dependencies = [
    "aiofiles>=24.1.0",
    "alembic>=1.16.2",
    "argon2-cffi>=25.1.0",
    "asyncpg>=0.30.0",
    "fastapi[all]>=0.115.13",
    "orjson>=3.10.18",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.20",
    "sqlalchemy[asyncio]>=2.0.41",
    "sqlmodel>=0.0.24",
]
