[project]
name = "charm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.3"
dependencies = [
    "aiofiles>=24.1.0",
    "alembic>=1.16.2",
    "argon2-cffi>=25.1.0",
    "asyncpg>=0.30.0",
    "boto3>=1.39.6",
    "celery>=5.5.3",
    "email-validator>=2.2.0",
    "fastapi-mail>=1.5.0",
    "fastapi[all]>=0.115.13",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "orjson>=3.10.18",
    "psutil>=7.0.0",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.20",
    "redis>=6.2.0",
    "rich>=14.0.0",
    "slowapi>=0.1.9",
    "sqlalchemy[asyncio]>=2.0.41",
    "sqlmodel>=0.0.24",
]
